--- a/Codici_CPMS/CPMS_finale.ipynb
+++ b/Codici_CPMS/CPMS_finale.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\brunet1f\\AppData\\Local\\Temp\\ipykernel_10632\\3222217437.py:375: FutureWarning: 'T' is deprecated and will be removed in a future version, please use 'min' instead.\n",
-      "  df_resampled = df.resample(str(init_val['timestamp'])+'T').mean()\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Ottimizzatore di ricarica per 10 colonnine AC e 2 colonnine DC con comando via modbus di 3 EVSE reali (Delta DC o \"Delta\", Alfen AC o \"Alfen\", Autel AC o \"Autel\")\n",
     "init_val={\n",
@@ -370,6 +361,23 @@
     "                payload = builder.to_registers()\n",
     "                Delta.write_registers(600, payload, slave=DeltaSlave)\n",
     "                Delta.close()      \n",
+    "\n",
+    "def DeltaReadSOC():\n",
+    "    if (Delta.connect()):\n",
+    "        reg=Delta.read_input_registers(11, 1, slave=DeltaSlave)\n",
+    "        decoder = BinaryPayloadDecoder.fromRegisters(reg.registers, Endian.BIG, wordorder=Endian.BIG)\n",
+    "        f = decoder.decode_16bit_uint()\n",
+    "        Delta.close()\n",
+    "    else:\n",
+    "        for iter in range(5):\n",
+    "            tm.sleep(1)\n",
+    "            print(\"Tentativi di connessione Delta \",iter)\n",
+    "            if (Delta.connect()):\n",
+    "                reg=Delta.read_input_registers(11, 1, slave=DeltaSlave)\n",
+    "                decoder = BinaryPayloadDecoder.fromRegisters(reg.registers, Endian.BIG, wordorder=Endian.BIG)\n",
+    "                f = decoder.decode_16bit_uint()\n",
+    "                Delta.close()\n",
+    "    return f\n",
     "\n",
     "\n",
     "#OTTIMIZZATORE\n",
@@ -873,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1269,7 +1277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1337,54 +1345,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Timestamp 0 di 288\n",
-      "WARNING: Could not locate the 'gurobi' executable, which is required for\n",
-      "solver gurobi\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Exception in thread Thread-3 (application):\n",
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\brunet1f\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\threading.py\", line 1041, in _bootstrap_inner\n",
-      "    self.run()\n",
-      "    ~~~~~~~~^^\n",
-      "  File \"c:\\Users\\brunet1f\\OneDrive - Edison S.p.A\\Documenti\\Ambiente_Python\\.venv\\Lib\\site-packages\\ipykernel\\ipkernel.py\", line 766, in run_closure\n",
-      "    _threading_Thread_run(self)\n",
-      "    ~~~~~~~~~~~~~~~~~~~~~^^^^^^\n",
-      "  File \"C:\\Users\\brunet1f\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\threading.py\", line 992, in run\n",
-      "    self._target(*self._args, **self._kwargs)\n",
-      "    ~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"C:\\Users\\brunet1f\\AppData\\Local\\Temp\\ipykernel_10632\\4242495467.py\", line 290, in application\n",
-      "    risultati.append(optimization(new_costi_in, new_costi_out, new_power_pv, new_power_consumption, new_schedule, new_initial_soc, new_battery_capacity, new_final_soc, new_disconnection_times, new_PchMax_vehicles, new_PdchMax_vehicles, new_PchMin_vehicles, new_PdchMin_vehicles ))\n",
-      "                     ~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"C:\\Users\\brunet1f\\AppData\\Local\\Temp\\ipykernel_10632\\4242495467.py\", line 170, in optimization\n",
-      "    results = solver.solve(model)\n",
-      "  File \"c:\\Users\\brunet1f\\OneDrive - Edison S.p.A\\Documenti\\Ambiente_Python\\.venv\\Lib\\site-packages\\pyomo\\opt\\base\\solvers.py\", line 534, in solve\n",
-      "    self.available(exception_flag=True)\n",
-      "    ~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"c:\\Users\\brunet1f\\OneDrive - Edison S.p.A\\Documenti\\Ambiente_Python\\.venv\\Lib\\site-packages\\pyomo\\opt\\solver\\ilmcmd.py\", line 35, in available\n",
-      "    if not pyomo.opt.solver.shellcmd.SystemCallSolver.available(\n",
-      "           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^\n",
-      "        self, exception_flag\n",
-      "        ^^^^^^^^^^^^^^^^^^^^\n",
-      "    ):\n",
-      "    ^\n",
-      "  File \"c:\\Users\\brunet1f\\OneDrive - Edison S.p.A\\Documenti\\Ambiente_Python\\.venv\\Lib\\site-packages\\pyomo\\opt\\solver\\shellcmd.py\", line 140, in available\n",
-      "    raise ApplicationError(msg % self.name)\n",
-      "pyomo.common.errors.ApplicationError: No executable found for solver 'gurobi'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if __name__ == \"__main__\":\n",
     "    #thread1 = threading.Thread(target = meter)\n",
@@ -1414,7 +1377,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
