--- a/Codici_CPMS/CPMS_finale.ipynb
+++ b/Codici_CPMS/CPMS_finale.ipynb
@@ -2,11 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\brunet1f\\AppData\\Local\\Temp\\ipykernel_14452\\618409605.py:393: FutureWarning: 'T' is deprecated and will be removed in a future version, please use 'min' instead.\n",
+      "  df_resampled = df.resample(str(init_val['timestamp'])+'T').mean()\n"
+     ]
+    }
+   ],
    "source": [
-    "#Ottimizzatore di ricarica per 10 colonnine AC e 2 colonnine DC con comando via modbus di 3 EVSE reali (Delta DC o \"Delta\", Alfen AC o \"Alfen\", Autel AC o \"Autel\")\n",
+    "#Ottimizzatore di ricarica per 10 colonnine AC e 2 colonnine DC con comando via modbus di 3 EVSE reali (Delta DC, Alfen AC, Autel AC)\n",
     "init_val={\n",
     "    'timestamp':5,\n",
     "    'numChargers' : 12,\n",
@@ -362,6 +371,7 @@
     "                Delta.write_registers(600, payload, slave=DeltaSlave)\n",
     "                Delta.close()      \n",
     "\n",
+    "#restituisce un intero di 3 cifre\n",
     "def DeltaReadSOC():\n",
     "    if (Delta.connect()):\n",
     "        reg=Delta.read_input_registers(11, 1, slave=DeltaSlave)\n",
@@ -958,7 +968,6 @@
     "            for itm in range(nWB):\n",
     "                model.maxSOCconstr.add(model.__dict__[f'SOC_cp{itm}'][i] <= 0.9 * battery_capacity[itm][i])\n",
     "\n",
-    "\n",
     "        # Definisci i vincoli sul SoC minimo per i veicoli al momento del distacco dalla stazione di carica\n",
     "        model.finalSOCconstr = pyo.ConstraintList()\n",
     "        for itm in range(nWB):\n",
@@ -994,10 +1003,10 @@
     "        ######################## Constraint sulle potenze allocabili per le colonnine in e out ##################\n",
     "\n",
     "        # Definizione delle liste di vincoli\n",
-    "        model.maxG2V = pyo.ConstraintList()\n",
-    "        model.maxV2G = pyo.ConstraintList()\n",
-    "        model.binaryG2V= pyo.ConstraintList()\n",
-    "        model.binaryV2G= pyo.ConstraintList()\n",
+    "        # model.maxG2V = pyo.ConstraintList()\n",
+    "        # model.maxV2G = pyo.ConstraintList()\n",
+    "        # model.binaryG2V= pyo.ConstraintList()\n",
+    "        # model.binaryV2G= pyo.ConstraintList()\n",
     "\n",
     "        # Aggiungere i vincoli basati sulle schedule per cui potenza allocabile (per scarica o carica dell'EV) dovrà\n",
     "        #essere fissata a zero nei timestamp dove NON c'è una connessione di veicolo alla colonnina \n",
@@ -1017,7 +1026,8 @@
     "\n",
     "        model.maxG2V_V2G= pyo.ConstraintList()\n",
     "        for i in range(nTimeStamp):\n",
-    "            for itm in range(nWB):\n",
+    "            #Qui fa solo le colonnine AC, quindi dalla 0 alla 9 compresa\n",
+    "            for itm in range(nWB-2):\n",
     "                if schedule[itm][i] == 0:\n",
     "                    # Se il veicolo non è connesso, la potenza deve essere zero\n",
     "                    model.maxG2V_V2G.add(model.__dict__[f'pG2V_cp{itm}'][i] == 0)\n",
@@ -1032,9 +1042,9 @@
     "                        model.maxG2V_V2G.add(expr=model.__dict__[f'pG2V_cp{itm}'][i]<=model.__dict__[f'flag_ch_cp{itm}'][i]*PchMax_vehicles[itm][i])\n",
     "                        model.maxG2V_V2G.add(expr=model.__dict__[f'pG2V_cp{itm}'][i]>=model.__dict__[f'flag_ch_cp{itm}'][i]*PchMin_vehicles[itm][i])\n",
     "                        model.maxG2V_V2G.add(expr=model.__dict__[f'pV2G_cp{itm}'][i]<=model.__dict__[f'flag_dch_cp{itm}'][i]*0)\n",
-    "\n",
+    "                        \n",
+    "                    \n",
     "        ######################## Constraint della rete in e out ###############\n",
-    "\n",
     "        model.flag_dch_grid=pyo.Var(range(nTimeStamp), within=pyo.Binary)\n",
     "        model.flag_ch_grid=pyo.Var(range(nTimeStamp), within=pyo.Binary)\n",
     "\n",
@@ -1172,6 +1182,10 @@
     "\n",
     "        new_costi_in = np.concatenate((costi_in, costi_in[:time]))[time:]\n",
     "        new_costi_out = np.concatenate((costi_out, costi_out[:time]))[time:]\n",
+    "\n",
+    "        #Se il SOC delle colonnine DC è > 80% impone la potenza di carica al valore minimo\n",
+    "\n",
+    "        \n",
     "\n",
     "        #Qui risolve il problema di ottimizzazione\n",
     "        risultati.append(optimization(new_costi_in, new_costi_out, new_power_pv, new_power_consumption, new_schedule, new_initial_soc, new_battery_capacity, new_final_soc, new_disconnection_times, new_PchMax_vehicles, new_PdchMax_vehicles, new_PchMin_vehicles, new_PdchMin_vehicles ))\n",
@@ -1357,7 +1371,7 @@
     "    thread2.start()\n",
     "    thread2.join() \n",
     "    #thread1.join()\n",
-    "    "
+    "\n"
    ]
   }
  ],
@@ -1377,7 +1391,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
