--- a/Codici_CPMS/CPMS_finale.ipynb
+++ b/Codici_CPMS/CPMS_finale.ipynb
@@ -2,22 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\brunet1f\\AppData\\Local\\Temp\\ipykernel_14452\\618409605.py:393: FutureWarning: 'T' is deprecated and will be removed in a future version, please use 'min' instead.\n",
-      "  df_resampled = df.resample(str(init_val['timestamp'])+'T').mean()\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Ottimizzatore di ricarica per 10 colonnine AC e 2 colonnine DC con comando via modbus di 3 EVSE reali (Delta DC, Alfen AC, Autel AC)\n",
     "init_val={\n",
-    "    'timestamp':5,\n",
+    "    'timestamp':15,\n",
     "    'numChargers' : 12,\n",
     "    'v2g':False\n",
     "}\n",
@@ -1027,7 +1018,7 @@
     "        model.maxG2V_V2G= pyo.ConstraintList()\n",
     "        for i in range(nTimeStamp):\n",
     "            #Qui fa solo le colonnine AC, quindi dalla 0 alla 9 compresa\n",
-    "            for itm in range(nWB-2):\n",
+    "            for itm in range(nWB):\n",
     "                if schedule[itm][i] == 0:\n",
     "                    # Se il veicolo non è connesso, la potenza deve essere zero\n",
     "                    model.maxG2V_V2G.add(model.__dict__[f'pG2V_cp{itm}'][i] == 0)\n",
@@ -1060,13 +1051,12 @@
     "\n",
     "\n",
     "        ########################################## SOLVER #################################\n",
-    "        solver = pyo.SolverFactory(\"gurobi\")\n",
-    "        #solver = pyo.SolverFactory('glpk', executable='C:\\\\w64\\\\glpsol')\n",
+    "        #solver = pyo.SolverFactory(\"gurobi\")\n",
+    "        solver = pyo.SolverFactory('glpk', executable='C:\\\\w64\\\\glpsol')\n",
     "\n",
     "        # Verifica dell'output del solver\n",
     "        results = solver.solve(model)\n",
     "        #results = solver.solve(model, tee=True) #con tee=True stampa i log del solver\n",
-    "        \n",
     "\n",
     "        if (results.solver.status == pyo.SolverStatus.ok) and (results.solver.termination_condition == pyo.TerminationCondition.optimal):\n",
     "            print(\"Soluzione ottimale trovata\")\n",
@@ -1120,6 +1110,7 @@
     "    risultati=[]\n",
     "    trigger = np.zeros(nWB)\n",
     "    start=False  #quando start=True inizia a dare i comandi alle colonnine\n",
+    "    cp_DC = [10, 11] #lista che contiene le colonnine in DC, in questo caso la 10 e la 11. Usato per impostare la potenza di ricarica al minimo se il soc è >80%\n",
     "\n",
     "    #Per evitare che le colonnine inizino a caricare se attacco il connettore imposto il setpoint di tutte e tre a 0\n",
     "    # DeltaSetPower(1)\n",
@@ -1184,14 +1175,16 @@
     "        new_costi_out = np.concatenate((costi_out, costi_out[:time]))[time:]\n",
     "\n",
     "        #Se il SOC delle colonnine DC è > 80% impone la potenza di carica al valore minimo\n",
-    "\n",
-    "        \n",
+    "        for colonnina in cp_DC:\n",
+    "            if new_initial_soc[colonnina][0] >= 0.8:\n",
+    "                posizioni=np.nonzero(new_PchMax_vehicles[colonnina])\n",
+    "                new_PchMax_vehicles[colonnina][posizioni]=new_PchMin_vehicles[colonnina][posizioni]\n",
     "\n",
     "        #Qui risolve il problema di ottimizzazione\n",
     "        risultati.append(optimization(new_costi_in, new_costi_out, new_power_pv, new_power_consumption, new_schedule, new_initial_soc, new_battery_capacity, new_final_soc, new_disconnection_times, new_PchMax_vehicles, new_PdchMax_vehicles, new_PchMin_vehicles, new_PdchMin_vehicles ))\n",
     "        soc_attuale = risultati[time][4]\n",
     "\n",
-    "        #Scrive i risulati in file csv\n",
+    "        #Scrive i risultati in file csv\n",
     "        try:\n",
     "            with open('Risultati.csv','a') as file:\n",
     "                file.write(datetime.now().isoformat()+','+\":\".join(map(str, timestamp_to_hour(time)))+','+str(time)+','+\",\".join(map(str, risultati[time][2]))+','+\",\".join(map(str, risultati[time][4]))+','+str(risultati[time][0])+','+'\\n')\n",
@@ -1370,8 +1363,7 @@
     "    thread2 = threading.Thread(target = application)\n",
     "    thread2.start()\n",
     "    thread2.join() \n",
-    "    #thread1.join()\n",
-    "\n"
+    "    #thread1.join()\n"
    ]
   }
  ],
