--- a/Codici_CPMS/CPMS_finale.ipynb
+++ b/Codici_CPMS/CPMS_finale.ipynb
@@ -891,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1184,7 +1184,7 @@
     "        new_costi_out = np.concatenate((costi_out, costi_out[:time]))[time:]\n",
     "\n",
     "        #Se il SOC delle colonnine DC è > 80% impone la potenza di carica al valore minimo\n",
-    "\n",
+    "        #inserisco questa frase dal mac 3 dicembre 10:00\n",
     "        \n",
     "\n",
     "        #Qui risolve il problema di ottimizzazione\n",
