--- a/Codici_CPMS/Grafici_Risultati.ipynb
+++ b/Codici_CPMS/Grafici_Risultati.ipynb
@@ -367,22 +367,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ok\n"
-     ]
+     "data": {
+      "text/plain": [
+       "0.807"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "inizio=False\n",
-    "\n",
-    "if not inizio:\n",
-    "    print(\"ok\")\n"
+    "x=int(807)\n",
+    "x/1000\n"
    ]
   }
  ],
@@ -402,7 +403,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
