--- a/Codici_CPMS/CPMS_finale.ipynb
+++ b/Codici_CPMS/CPMS_finale.ipynb
@@ -113,6 +113,7 @@
     "import time as tm\n",
     "import threading\n",
     "import keyboard\n",
+    "import queue\n",
     "\n",
     "from pymodbus.server import StartSerialServer\n",
     "#from pymodbus.transaction import ModbusRtuFramer\n",
@@ -1348,7 +1349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1374,7 +1375,9 @@
     "    #M_DCb = ModbusClient(host = IP_Meter_DCb, auto_open=True, auto_close=True, debug=False, timeout=timeout_meter,port=port)\n",
     "    #M_HH = ModbusClient(host = IP_Meter_HH, auto_open=True, auto_close=True, debug=False, timeout=timeout_meter,port=port)\n",
     "    #M_PV = ModbusClient(host = IP_Meter_PV, auto_open=True, auto_close=True, debug=False, timeout=timeout_meter,port=port)\n",
-    "    global misurazioni\n",
+    "\n",
+    "    #Uso la libreria queue per comunicare i valori da un thread all'altro \n",
+    "    data_queue = queue.Queue()\n",
     "    \n",
     "\n",
     "    while True:\n",
@@ -1409,6 +1412,8 @@
     "        with open('M_Alfen.csv','a') as file:\n",
     "            file.write(datetime.now().isoformat()+','+str(test3)[1:-1]+','+'meter Alfen'+','+'\\n')\n",
     "\n",
+    "        data_queue.put()\n",
+    "        \n",
     "        tm.sleep(granularity)\n",
     "\n",
     "        if keyboard.is_pressed('esc'):\n",
@@ -2007,9 +2012,8 @@
    ],
    "source": [
     "if __name__ == \"__main__\":\n",
-    "    #thread1 = threading.Thread(target = meter)\n",
+    "    #thread1 = threading.Thread(target = meter, daemon=True)\n",
     "    #thread1.start()\n",
-    "    #thread1.daemon = True\n",
     "    thread2 = threading.Thread(target = application)\n",
     "    thread2.start()\n",
     "    thread2.join() \n",
